--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@600;800&display=swap");
+
+/*
+ * green: #00C04D 
+ * red: #ED455D
+ * light grey: #DAE3EA
+ * dark-grey: #6D7D8B */
+
+.heading {
+  font-family: "Mulish", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 60px;
+}
+
+.caption {
+  font-family: "Mulish", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.text-green {
+  color: #00c04d;
+}
+
+.text-red {
+  color: #ed455d;
+}
+
+.text-grey {
+  color: #dae3ea;
+}
+
+.text-white {
+  color: #fff;
+}
+
+.text-grey-darker {
+  color: #6d7d8b;
+}
+
+.bg-green {
+  background: #00c04d;
+}
+
+.bg-grey {
+  background: #dae3ea;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  width: 100vw;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  height: 52px;
+  width: 100%;
+  font-family: "Mulish", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-field {
+  width: 100%;
+  margin-top: 20px;
+  max-width: 426px;
+  position: relative;
+}
+
+.message {
+  position: absolute;
+  left: -50%;
+  top: 50%;
+  transform: translate(0%, -50%);
+  text-align: left;
+  max-width: 200px;
+}
+
+.field {
+  display: grid;
+  grid-column-gap: 20px;
+}
+
+.field-2 {
+  grid-template-columns: 1fr 1fr;
+}
+
+.btn {
+  padding: 10px;
+  font-family: "Mulish", sans-serif;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 20.08px;
+  letter-spacing: 0.1em;
+  border: none;
+  border-radius: 10px;
+}
+
+.btn-block {
+  width: 100%;
 }
